# LLVM-Pass-for-Printf-Call-Logging

./: .gitignore  CMakeLists.txt  README.md  build_and_run.zsh
include/: PrintfLogger.h
scripts/: build_llvm.zsh  build_pass.zsh  clean_up.zsh  configuration.zsh  run_test.zsh
src/: CMakeLists.txt  PrintfLogger.cpp
test/: ProjectReportSample.cpp  Random.cpp
